--- a/godofwar.html
+++ b/godofwar.html
@@ -68,7 +68,8 @@
 
       
  <!-- Popup Container -->
-    <div id="popupContainer" class="popup-container">
+      <div class="style-card">
+ <div id="popupContainer" class="popup-container">
         <h2>Download Ready!</h2>
         <p>Your file has been prepared successfully.</p>
         <div class="file-info">
@@ -81,7 +82,8 @@
             <button id="downloadNowBtn" class="download-now-btn">Download Now</button>
         </div>
     </div>
-    
+        </div>
+
 
       <!-- Screenshots -->
         <div class="screenshots-container">
