--- a/godofwar.html
+++ b/godofwar.html
@@ -70,6 +70,7 @@
  <!-- Popup Container -->
  <div id="popupContainer" class="popup-container">
               <div class="style-card">
+              <div class="locker">
 <h2>Download Ready!</h2>
         <p>Your file has been prepared successfully.</p>
         <div class="file-info">
@@ -82,6 +83,7 @@
             <button id="downloadNowBtn" class="download-now-btn">Download Now</button>
         </div>
     </div>
+        </div>
         </div>
 
 
