--- a/godofwar.html
+++ b/godofwar.html
@@ -69,7 +69,7 @@
       
  <!-- Popup Container -->
  <div id="popupContainer" class="popup-container">
-               <div class="style-card">
+               <div class="style-locker">
   <div class="locker">
 <h2>Download Ready!</h2>
         <p>Your file has been prepared successfully.</p>
