--- a/godofwar.html
+++ b/godofwar.html
@@ -71,8 +71,18 @@
  <div id="popupContainer" class="popup-container">
                <div class=" style-card">
   <div class="locker">
-        <p>Your file has been prepared successfully.</p>
-       
+         <div class="locker-banner-container">
+    <!-- Background banner image -->
+    <img src="https://m.media-amazon.com/images/I/71HEZBorXiL._AC_UF1000,1000_QL80_.jpg" alt="Banner Background" class="locker-bg" />
+
+    <!-- App Icon -->
+    <img src="https://avatarfiles.alphacoders.com/140/thumb-1920-140579.png" alt="App Icon" class="locker-icon" />
+  </div>
+
+  <div class="content">
+    <div class="title">Red Dead Redemption 2 Mobile</div>
+  </div>
+
     </div>
         </div>
         </div>
