--- a/godofwar.html
+++ b/godofwar.html
@@ -79,9 +79,31 @@
     <img src="https://avatarfiles.alphacoders.com/140/thumb-1920-140579.png" alt="App Icon" class="locker-icon" />
   </div>
 
-  <div class="content">
-    <div class="title">Red Dead Redemption 2 Mobile</div>
+
+ <h2>Verify You're Human to Unlock the Game</h2>
+  <p>Complete the following steps to download [Game Name].</p>
+  
+  <div class="offer-tasks">
+    <div class="task">
+      <h4>Task 1: Complete a Survey</h4>
+      <button class="task-btn">Complete Survey</button>
+    </div>
+    
+    <div class="task">
+      <h4>Task 2: Install an App</h4>
+      <button class="task-btn">Install App</button>
+    </div>
+    
+    <div class="task">
+      <h4>Task 3: Watch a Video</h4>
+      <button class="task-btn">Watch Video</button>
+    </div>
   </div>
+
+  <div id="verification-status" class="verification-status">
+    <p id="verification-text">You must complete all tasks to proceed.</p>
+  </div>
+
 
     </div>
         </div>
