--- a/godofwar.html
+++ b/godofwar.html
@@ -80,23 +80,20 @@
   </div>
 
 
- <h2>Verify You're Human to Unlock the Game</h2>
-  <p>Complete the following steps to download [Game Name].</p>
+ <h2>Download ready. Please verify you're human to continue.</h2>
+  <p>Complete just one of the following verification checks to start downloading.</p>
   
   <div class="offer-tasks">
     <div class="task">
-      <h4>Task 1: Complete a Survey</h4>
-      <button class="task-btn">Complete Survey</button>
+      <button class="task-btn">Human Check </button>
     </div>
     
     <div class="task">
-      <h4>Task 2: Install an App</h4>
-      <button class="task-btn">Install App</button>
+      <button class="task-btn">Human Check </button>
     </div>
     
     <div class="task">
-      <h4>Task 3: Watch a Video</h4>
-      <button class="task-btn">Watch Video</button>
+      <button class="task-btn">Human Check </button>
     </div>
   </div>
 
