--- a/godofwar.html
+++ b/godofwar.html
@@ -79,10 +79,12 @@
     <img src="https://avatarfiles.alphacoders.com/140/thumb-1920-140579.png" alt="App Icon" class="locker-icon" />
   </div>
 
+         <div class="title">
 
  <h2>Download ready. Please verify you're human to continue.</h2>
   <p>Complete just one of the following verification checks to start downloading.</p>
-  
+    </div>
+
   <div class="offer-tasks">
     <div class="task">
       <button class="task-btn">Human Check </button>
