--- a/godofwar.html
+++ b/godofwar.html
@@ -71,9 +71,11 @@
  <div id="popupContainer" class="popup-container">
                <div class=" style-card">
   <div class="locker">
-   
+            <div class="Icon">
+
     <!-- App Icon -->
     <img src="https://avatarfiles.alphacoders.com/140/thumb-1920-140579.png" alt="App Icon" class="locker-icon" />
+           </div>
 
          <div class="title">
 
