--- a/godofwar.html
+++ b/godofwar.html
@@ -74,7 +74,7 @@
             <div class="Icon">
 
     <!-- App Icon -->
-    <img src="https://avatarfiles.alphacoders.com/140/thumb-1920-140579.png" alt="App Icon" />
+    <img src="https://avatarfiles.alphacoders.com/140/thumb-1920-140579.png" />
            </div>
 
          <div class="title">
