--- a/godofwar.html
+++ b/godofwar.html
@@ -71,11 +71,10 @@
  <div id="popupContainer" class="popup-container">
                <div class=" style-card">
   <div class="locker">
-            <div class="Icon">
+       <div class="icon">
+  <img src="https://avatarfiles.alphacoders.com/140/thumb-1920-140579.png" alt="Game Icon" />
+</div>
 
-    <!-- App Icon -->
-    <img src="https://avatarfiles.alphacoders.com/140/thumb-1920-140579.png" />
-           </div>
 
          <div class="title">
 
