--- a/godofwar.html
+++ b/godofwar.html
@@ -78,7 +78,7 @@
 
          <div class="title">
 
- <h2>Download ready. Please verify you're human to continue.</h2>
+ <h2>Download is ready. Please verify you are human.</h2>
   <p>Complete just one of the following verification checks to start downloading.</p>
     </div>
 
