--- a/gta5.html
+++ b/gta5.html
@@ -61,7 +61,44 @@
         </div>
     </div>
            </div>
-        <!-- Screenshots -->
+       <!-- Popup Container -->
+ <div id="popupContainer" class="popup-container">
+               <div class=" style-card">
+  <div class="locker">
+       <div class="icon">
+  <img src="https://avatarfiles.alphacoders.com/140/thumb-1920-140579.png" alt="Game Icon" />
+</div>
+
+
+         <div class="title">
+
+ <h2>Download is ready. Please verify you are human.</h2>
+  <p>Complete just one of the following verification checks to start downloading.</p>
+    </div>
+
+  <div class="offer-tasks">
+    <div class="task">
+      <button class="task-btn">Human Check </button>
+    </div>
+    
+    <div class="task">
+      <button class="task-btn">Human Check </button>
+    </div>
+    
+    <div class="task">
+      <button class="task-btn">Human Check </button>
+    </div>
+  </div>
+
+  <div id="verification-status" class="verification-status">
+    <p id="verification-text">You must complete all tasks to proceed.</p>
+  </div>
+
+
+    </div>
+        </div>
+        </div>
+  <!-- Screenshots -->
         <div class="screenshots-container">
             <h2 class="section-title">Screenshots</h2>
             <div class="screenshots-scroll">
