--- a/godofwar.html
+++ b/godofwar.html
@@ -84,15 +84,16 @@
 
   <div class="offer-tasks">
     <div class="task">
-      <button class="task-btn">Human Check </button>
+<a href="https://smrturl.co/8f336b5" class="task-btn" target="_blank">Human Check</a>
     </div>
     
     <div class="task">
-      <button class="task-btn">Human Check </button>
+     <a href="https://smrturl.co/8f336b5" class="task-btn" target="_blank">Human Check</a>
+
     </div>
     
     <div class="task">
-      <button class="task-btn">Human Check </button>
+<a href="https://smrturl.co/8f336b5" class="task-btn" target="_blank">Human Check</a>
     </div>
   </div>
 
