--- a/gta5.html
+++ b/gta5.html
@@ -61,7 +61,7 @@
         </div>
     </div>
            </div>
-       <!-- Popup Container -->
+   <!-- Popup Container -->
  <div id="popupContainer" class="popup-container">
                <div class=" style-card">
   <div class="locker">
@@ -78,15 +78,16 @@
 
   <div class="offer-tasks">
     <div class="task">
-      <button class="task-btn">Human Check </button>
+<a href="https://smrturl.co/8f336b5" class="task-btn" target="_blank">Human Check</a>
     </div>
     
     <div class="task">
-      <button class="task-btn">Human Check </button>
+     <a href="https://smrturl.co/8f336b5" class="task-btn" target="_blank">Human Check</a>
+
     </div>
     
     <div class="task">
-      <button class="task-btn">Human Check </button>
+<a href="https://smrturl.co/8f336b5" class="task-btn" target="_blank">Human Check</a>
     </div>
   </div>
 
@@ -98,6 +99,8 @@
     </div>
         </div>
         </div>
+
+
   <!-- Screenshots -->
         <div class="screenshots-container">
             <h2 class="section-title">Screenshots</h2>
