--- a/godofwar.html
+++ b/godofwar.html
@@ -72,7 +72,7 @@
                <div class=" style-card">
   <div class="locker">
        <div class="icon">
-  <img src="https://avatarfiles.alphacoders.com/140/thumb-1920-140579.png" alt="Game Icon" />
+  <img src="assets/images/godofwar/godofwar.png" alt="Game Icon" />
 </div>
 
 
