--- a/ittakestwo.html
+++ b/ittakestwo.html
@@ -66,7 +66,7 @@
                <div class=" style-card">
   <div class="locker">
        <div class="icon">
-  <img src="https://avatarfiles.alphacoders.com/140/thumb-1920-140579.png" alt="Game Icon" />
+  <img src="assets/images/ittakestwo/ittakestwo.png" alt="Game Icon" />
 </div>
 
 
