--- a/godofwar.html
+++ b/godofwar.html
@@ -84,16 +84,21 @@
 
   <div class="offer-tasks">
     <div class="task">
-<a href="https://smrturl.co/8f336b5" class="task-btn" target="_blank">Human Check</a>
+<button class="task-btn" onclick="window.open('https://smrturl.co/8f336b5', '_blank')">
+  Human Check
+</button>
     </div>
     
     <div class="task">
-     <a href="https://smrturl.co/8f336b5" class="task-btn" target="_blank">Human Check</a>
-
+<button class="task-btn" onclick="window.open('https://smrturl.co/8f336b5', '_blank')">
+  Human Check
+</button>
     </div>
     
     <div class="task">
-<a href="https://smrturl.co/8f336b5" class="task-btn" target="_blank">Human Check</a>
+<button class="task-btn" onclick="window.open('https://smrturl.co/8f336b5', '_blank')">
+  Human Check
+</button>   
     </div>
   </div>
 
