--- a/gta5.html
+++ b/gta5.html
@@ -66,7 +66,7 @@
                <div class=" style-card">
   <div class="locker">
        <div class="icon">
-  <img src="assets/images/gta5/gta5.png" alt="Game Icon" />
+  <img src="assets/images/godofwar/godofwar.png" alt="Game Icon" />
 </div>
 
 
@@ -78,16 +78,21 @@
 
   <div class="offer-tasks">
     <div class="task">
-<a href="https://smrturl.co/8f336b5" class="task-btn" target="_blank">Human Check</a>
+<button class="task-btn" onclick="window.open('https://smrturl.co/8f336b5', '_blank')">
+  Human Check
+</button>
     </div>
     
     <div class="task">
-     <a href="https://smrturl.co/8f336b5" class="task-btn" target="_blank">Human Check</a>
-
+<button class="task-btn" onclick="window.open('https://smrturl.co/8f336b5', '_blank')">
+  Human Check
+</button>
     </div>
     
     <div class="task">
-<a href="https://smrturl.co/8f336b5" class="task-btn" target="_blank">Human Check</a>
+<button class="task-btn" onclick="window.open('https://smrturl.co/8f336b5', '_blank')">
+  Human Check
+</button>   
     </div>
   </div>
 
@@ -99,6 +104,7 @@
     </div>
         </div>
         </div>
+
 
 
   <!-- Screenshots -->
