--- a/sekiro.html
+++ b/sekiro.html
@@ -60,12 +60,12 @@
         </div>
     </div>
            </div>
-      <!-- Popup Container -->
+ <!-- Popup Container -->
  <div id="popupContainer" class="popup-container">
                <div class=" style-card">
   <div class="locker">
        <div class="icon">
-  <img src="https://avatarfiles.alphacoders.com/140/thumb-1920-140579.png" alt="Game Icon" />
+  <img src="assets/images/godofwar/godofwar.png" alt="Game Icon" />
 </div>
 
 
@@ -77,16 +77,21 @@
 
   <div class="offer-tasks">
     <div class="task">
-<a href="https://smrturl.co/8f336b5" class="task-btn" target="_blank">Human Check</a>
+<button class="task-btn" onclick="window.open('https://smrturl.co/8f336b5', '_blank')">
+  Human Check
+</button>
     </div>
     
     <div class="task">
-     <a href="https://smrturl.co/8f336b5" class="task-btn" target="_blank">Human Check</a>
-
+<button class="task-btn" onclick="window.open('https://smrturl.co/8f336b5', '_blank')">
+  Human Check
+</button>
     </div>
     
     <div class="task">
-<a href="https://smrturl.co/8f336b5" class="task-btn" target="_blank">Human Check</a>
+<button class="task-btn" onclick="window.open('https://smrturl.co/8f336b5', '_blank')">
+  Human Check
+</button>   
     </div>
   </div>
 
@@ -98,6 +103,7 @@
     </div>
         </div>
         </div>
+
 
   <!-- Screenshots -->
         <div class="screenshots-container">
