--- a/sekiro.html
+++ b/sekiro.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="assets/css/style2.css">
 <link rel="stylesheet" href="assets/css/loader.css">
 <link rel="stylesheet" href="assets/css/popup.css">
+<link rel="stylesheet" href="assets/css/locker.css">
 </head>
 <body>
  <!-- Preloader -->
