--- a/godofwar.html
+++ b/godofwar.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nextplay- Download Free Games</title>
+    <title>Spacetooles- Download Free Games</title>
     <link rel="stylesheet" href="assets/css/style2.css">
 <link rel="stylesheet" href="assets/css/loader.css">
 <link rel="stylesheet" href="assets/css/popup.css">
