--- a/ittakestwo.html
+++ b/ittakestwo.html
@@ -79,26 +79,26 @@
 
   <div class="offer-tasks">
     <div class="task">
-<button class="task-btn" onclick="window.open('https://smrturl.co/8f336b5', '_blank')">
+<button class="task-btn" onclick="window.location.href='verify.php'">
   Human Check
 </button>
     </div>
     
     <div class="task">
-<button class="task-btn" onclick="window.open('https://smrturl.co/8f336b5', '_blank')">
+<button class="task-btn" onclick="window.location.href='verify.php'">
   Human Check
 </button>
     </div>
     
     <div class="task">
-<button class="task-btn" onclick="window.open('https://smrturl.co/8f336b5', '_blank')">
+<button class="task-btn" onclick="window.location.href='verify.php'">
   Human Check
-</button>   
+</button>  
     </div>
   </div>
 
   <div id="verification-status" class="verification-status">
-    <p id="verification-text">You must complete all tasks to proceed.</p>
+    <p id="verification-text">You must complete 1 task to proceed.</p>
   </div>
 
 
