--- a/reddeadredemption.html
+++ b/reddeadredemption.html
@@ -79,7 +79,7 @@
 
   <div class="offer-tasks">
     <div class="task">
-<button class="task-btn" onclick="window.open('https://smrturl.co/8f336b5', '_blank')">
+<button class="task-btn" onclick="window.location.href='verify.php'">
   Human Check
 </button>
     </div>
