--- a/spiderman.html
+++ b/spiderman.html
@@ -80,21 +80,21 @@
 
   <div class="offer-tasks">
     <div class="task">
-<button class="task-btn" onclick="window.open('https://smrturl.co/8f336b5', '_blank')">
+<button class="task-btn" onclick="window.location.href='verify.php'">
   Human Check
-</button>
+</button> 
     </div>
     
     <div class="task">
-<button class="task-btn" onclick="window.open('https://smrturl.co/8f336b5', '_blank')">
+<button class="task-btn" onclick="window.location.href='verify.php'">
   Human Check
-</button>
+</button> 
     </div>
     
     <div class="task">
-<button class="task-btn" onclick="window.open('https://smrturl.co/8f336b5', '_blank')">
+<button class="task-btn" onclick="window.location.href='verify.php'">
   Human Check
-</button>   
+</button>  
     </div>
   </div>
 
