--- a/residentevil4.html
+++ b/residentevil4.html
@@ -80,21 +80,24 @@
 
   <div class="offer-tasks">
     <div class="task">
-<button class="task-btn" onclick="window.location.href='verify.php'">
+<button class="task-btn" onclick="window.open('https://smrturl.co/8f336b5', '_blank')">
   Human Check
 </button>
+
     </div>
     
     <div class="task">
-<button class="task-btn" onclick="window.location.href='verify.php'">
+<button class="task-btn" onclick="window.open('https://smrturl.co/8f336b5', '_blank')">
   Human Check
 </button>
+
     </div>
     
     <div class="task">
-<button class="task-btn" onclick="window.location.href='verify.php'">
+<button class="task-btn" onclick="window.open('https://smrturl.co/8f336b5', '_blank')">
   Human Check
-</button> 
+</button>
+
     </div>
   </div>
 
