--- a/index.html
+++ b/index.html
@@ -56,7 +56,28 @@
     <section class="featured-games">
       <h2 class="section-title">Populare Games </h2>
       <div class="cards-container">
-        <!-- App Card 1 -->
+         <!-- App Card 1 -->
+        <div class="card">
+          <div class="card-info">
+            <div class="app-icon">
+              <img src="assets/images/roblox/roblox.png" alt="App Icon" />
+            </div>
+            <div class="app-info">
+              <h3 class="app-name">Roblox </h3>
+              <p class="app-developer">Roblox corporation </p>
+              <div class="app-rating">
+                <span class="stars">★★★★★</span><span>5</span>
+              </div>
+              <div class="app-stats">
+                <span>1 GB</span><span>Adventure</span>
+              </div>
+            </div>
+            <button class="download-btn" onclick="location.href='https://othmanemoumen.github.io/nextplay/roblox.html'">Generate
+              
+            </button>
+          </div>
+        </div>
+          <!-- App Card 1 -->
         <div class="card">
           <div class="card-info">
             <div class="app-icon">
