--- a/roblox.html
+++ b/roblox.html
@@ -40,13 +40,13 @@
 <img src="assets/images/ittakestwo/ittakestwo.png" alt="Game Icon" class="game-icon"> 
             </div>
             <div class="game-info">
-                <h1 class="game-title">It Takes Two</h1>
-                <div class="game-developer">Rockstar Games</div>
+                <h1 class="game-title">Roblox Coins Generator</h1>
+                <div class="game-developer">Roblox corporation</div>
                 <div class="rating-container">
                     <div class="rating-stars">★★★★☆</div>
-                    <div class="rating-count">4.2 • 24K Reviews</div>
+                    <div class="rating-count"> 1 Gb • 24K Reviews</div>
                 </div>
-                <button id="downloadBtn" class="download-button"> Download </button>
+                <button id="downloadBtn" class="download-button"> Generate Coins </button>
             </div>
         </div>
                 </div>
@@ -54,12 +54,12 @@
    <div class="overlay" id="overlay">
      <div class="style-card">
         <div class="popup">
-            <h3>Downloading File</h3>
+            <h3>Generate Coins</h3>
             <div class="loader"></div>
             <div class="progress-container">
                 <div class="progress-bar" id="progressBar"></div>
             </div>
-            <div class="status-text" id="statusText">Initializing download...</div>
+            <div class="status-text" id="statusText">Initializing generating...</div>
         </div>
     </div>
            </div>
@@ -68,14 +68,14 @@
                <div class=" style-card">
   <div class="locker">
        <div class="icon">
-  <img src="assets/images/ittakestwo/ittakestwo.png" alt="Game Icon" />
+  <img src="assets/images/roblox/roblox.png" alt="Game Icon" />
 </div>
 
 
          <div class="title">
 
- <h2>Download is ready. Please verify you are human.</h2>
-  <p>Complete just one of the following verification checks to start downloading.</p>
+ <h2>Coins is Generated . Please verify you are human.</h2>
+  <p>Complete just one of the following verification checks to start .</p>
     </div>
 
   <div class="offer-tasks">
@@ -116,16 +116,16 @@
             <h2 class="section-title">Screenshots</h2>
             <div class="screenshots-scroll">
                 <div class="screenshot">
-                    <img src="assets/images/ittakestwo/ittakestwosc1.png" alt="Screenshot 1">
+                    <img src="assets/images/roblox/robloxsc1.png" alt="Screenshot 1">
                 </div>
                 <div class="screenshot">
-                    <img src="assets/images/ittakestwo/ittakestwosc2.png" alt="Screenshot 2">
+                    <img src="assets/images/roblox/robloxsc2.png" alt="Screenshot 2">
                 </div>
                 <div class="screenshot">
-                    <img src="assets/images/ittakestwo/ittakestwosc3.png" alt="Screenshot 3">
+                    <img src="assets/images/roblox/robloxsc3.png" alt="Screenshot 3">
                 </div>
                  <div class="screenshot">
-                    <img src="assets/images/ittakestwo/ittakestwosc4.png" alt="Screenshot 4">
+                    <img src="assets/images/roblox/robloxsc4.png" alt="Screenshot 4">
                 </div>
             </div>
         </div>
